--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -17,8 +17,8 @@
       </div>
 
       <div class="form-group">
-          <label for="email">Email</label>
-          <input type="text" formControlName="email" name="email" class="form-control" placeholder="Enter Email" >
+          <label for="username">username</label>
+          <input type="text" formControlName="username" name="username" class="form-control" placeholder="Enter Email" >
 
           <div>
               <div>
@@ -46,21 +46,7 @@
           </div>
       </div>
 
-      <div class="form-group">
-          <label for="confirm_password">Confirm Password</label>
-          <input type="password" formControlName="confirmPassword" name="confirm_password" class="form-control" placeholder="Enter Confirm Password">
+      <button class="btn btn-dark btn-sm mt-4" routerLink="">Register</button>
 
-          <div class="invalid-feedback">
-              <div>
-                  Confirm Password id required
-              </div>
-
-              <div>
-                  Password must match
-              </div>
-          </div>
-      </div>
-
-      <button type="submit" class="btn btn-dark btn-sm mt-4" >Register</button>
   </form>
 </div>
