--- a/fe-angular/src/app/components/login/login.component.html
+++ b/fe-angular/src/app/components/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<div>
+  <a href="javascript:void(0)" [routerLink]="['']" class="nav-link">Login</a>
+
+  <form (ngSubmit)="submit()" [formGroup]="form">
+
+    <div class="form-group">
+        <label for="username">username</label>
+        <input type="text" formControlName="username" name="username" class="form-control" placeholder="Enter username">
+    </div>
+
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" formControlName="password" name="password" class="form-control" placeholder="Enter Password">
+    </div>
+
+    <button type="submit" class="btn btn-dark btn-sm mt-4">Login</button>
+
+    <button type="submit" class="btn btn-dark btn-sm mt-4" routerLink="/form">Register</button>
+
+  </form>
+</div>
