--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -1,52 +1,30 @@
-<div class="container mt-4">
-  <header class="bg-dark text-white p-2 mb-2 text-center">
-      <h1>Register</h1>
-  </header>
+<div class="container d-flex bg-light my-5 p-5 justify-content-center">
 
+  <form (ngSubmit)="submit()" [formGroup]="form" class="bg-secondary p-5 w-50">
 
-  <form (ngSubmit)="submit()" [formGroup]="form">
-      <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" formControlName="name" name="name" class="form-control" placeholder="Enter Name">
+    <div class="form-group px-5 p-3">
+      <label for="name">Name</label>
+      <input type="text" formControlName="name" name="name" class="form-control" placeholder="Enter name">
+    </div>
 
-          <div class="invalid-feedback">
-              <div>
-                  Name id required
-              </div>
-          </div>
-      </div>
+    <div class="form-group px-5 p-3">
+      <label for="username">Username</label>
+      <input type="text" formControlName="username" name="username" class="form-control" placeholder="Enter email" >
+    </div>
 
-      <div class="form-group">
-          <label for="username">username</label>
-          <input type="text" formControlName="username" name="username" class="form-control" placeholder="Enter Email" >
+    <div class="form-group px-5 p-3">
+      <label for="password">Password</label>
+      <input type="password" formControlName="password" name="password" class="form-control" placeholder="Enter password">
+    </div>
 
-          <div>
-              <div>
-                  Email id required
-              </div>
+    <div class="container d-flex justify-content-center my-4">
+      <button type="submit" class="btn btn-light" routerLink="">Register</button>
+    </div>
 
-              <div>
-                  Email must be a valid address
-              </div>
-          </div>
-      </div>
-
-      <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" formControlName="password" name="password" class="form-control" placeholder="Enter Password">
-
-          <div class="invalid-feedback">
-              <div>
-                  Password id required
-              </div>
-
-              <div>
-                  Password must be atleast 6 characters
-              </div>
-          </div>
-      </div>
-
-      <button class="btn btn-dark btn-sm mt-4" routerLink="">Register</button>
+    <div class="container d-flex justify-content-center my-4">
+      <button type="submit" class="btn btn-light" routerLink="">Back</button>
+    </div>
 
   </form>
+
 </div>
