--- a/fe-angular/src/app/components/login/login.component.html
+++ b/fe-angular/src/app/components/login/login.component.html
@@ -1,21 +1,27 @@
-<div>
-  <a href="javascript:void(0)" [routerLink]="['']" class="nav-link">Login</a>
+<div class="container mt-5 p-5 d-flex justify-content-center">
+  <a href="javascript:void(0)" [routerLink]="['']" class="nav-link"></a>
 
-  <form (ngSubmit)="submit()" [formGroup]="form">
+  <form (ngSubmit)="submit()" [formGroup]="form" class="bg-light p-5">
 
-    <div class="form-group">
-        <label for="username">username</label>
-        <input type="text" formControlName="username" name="username" class="form-control" placeholder="Enter username">
+    <div class="form-group my-4">
+        <label for="username" class="mb-1">Username</label>
+        <input type="text" formControlName="username" name="username" class="form-control" placeholder="Enter email">
     </div>
 
     <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" formControlName="password" name="password" class="form-control" placeholder="Enter Password">
+        <label for="password" class="mb-1">Password</label>
+        <input type="password" formControlName="password" name="password" class="form-control" placeholder="Enter password">
     </div>
 
-    <button type="submit" class="btn btn-dark btn-sm mt-4">Login</button>
+    <div class="container d-flex justify-content-center my-4">
+      <button type="submit" class="btn btn-secondary">Login</button>
+    </div>
 
-    <button type="submit" class="btn btn-dark btn-sm mt-4" routerLink="/form">Register</button>
+    <div class="container d-flex justify-content-center my-4">
+      <button type="submit" class="btn btn-secondary" routerLink="/form">Register</button>
+    </div>
+
+
 
   </form>
 </div>
