--- a/fe-angular/src/app/components/flights/flights.component.html
+++ b/fe-angular/src/app/components/flights/flights.component.html
@@ -1,31 +1,31 @@
-<p>home works!</p>
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">Id</th>
-      <th scope="col">Departure</th>
-      <th scope="col">Arrival</th>
-      <th scope="col">Available Seats</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
+<div class="container my-5 p-5 w-75">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Departure</th>
+        <th scope="col">Arrival</th>
+        <th scope="col">Available Seats</th>
+        <th scope="col">Add</th>
+        <th scope="col">Update</th>
+        <th scope="col">Delete</th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let flight of flights">
+        <th scope="row">{{flight.id}}</th>
+        <td>{{flight.departure}}</td>
+        <td>{{flight.arrival}}</td>
+        <td>{{flight.availableSeats}}</td>
+        <td style="text-align: right;" class="d-flex button_div">
+          <button type="button" class="btn btn-outline-success" routerLink="/modifyFlights"><i class="fa-solid fa-plus"></i></button>
+        </td>
+        <td>
+          <button type="button" class="btn btn-outline-warning" routerLink="/modifyFlights"><i class="fa-solid fa-pen-to-square"></i></button>
+        </td>
+        <td>
+          <button type="button" class="btn btn-outline-danger" routerLink="/modifyFlights"><i class="fa-solid fa-xmark"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
