--- a/fe-angular/src/app/components/login/login.component.html
+++ b/fe-angular/src/app/components/login/login.component.html
@@ -14,14 +14,12 @@
     </div>
 
     <div class="container d-flex justify-content-center my-4">
-      <button type="submit" class="btn btn-secondary">Login</button>
+      <button type="submit" class="btn btn-secondary" routerLink="/flights">Login</button>
     </div>
 
     <div class="container d-flex justify-content-center my-4">
       <button type="submit" class="btn btn-secondary" routerLink="/form">Register</button>
     </div>
-
-
 
   </form>
 </div>
