--- a/fe-angular/src/app/components/flights/flights.component.html
+++ b/fe-angular/src/app/components/flights/flights.component.html
@@ -1,5 +1,7 @@
-<div class="container my-5 p-5 w-75">
-  <table class="table table-striped">
+<app-navbar></app-navbar>
+
+<div class="container my-5 w-100">
+  <table class="table table-responsive table-striped">
     <thead>
       <tr>
         <th scope="col">Id</th>
