--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="container d-flex justify-content-center my-4">
-      <button type="submit" class="btn btn-light" routerLink="">Register</button>
+      <button type="submit" class="btn btn-light">Register</button>
     </div>
 
     <div class="container d-flex justify-content-center my-4">
