--- a/fe-angular/src/app/components/modify-flights/modify-flights.component.html
+++ b/fe-angular/src/app/components/modify-flights/modify-flights.component.html
@@ -1,72 +1,74 @@
-<div class="container d-flex bg-light my-5 p-5 justify-content-center">
+<app-navbar></app-navbar>
 
-  <form (ngSubmit)="submit()" [formGroup]="form" class="bg-secondary p-5 w-50">
+<div class="row row-cols-1 row-cols-md-3 my-5 mx-1 text-start">
+  <div class="col">
+    <div class="card mb-4 rounded-3 shadow-sm border-success">
+      <div class="card-header py-3 bg-success text-white">
+        <h4 class="my-0 fw-normal text-center">Add Flight</h4>
+      </div>
+      <div class="card-body">
+        <form (ngSubmit)="add()" [formGroup]="form">
+          <div class="form-group p-3">
+            <label for="departure">Departure</label>
+            <input type="number" formControlName="departure" name="departure" class="form-control" placeholder="Enter departure city">
+          </div>
 
-    <div class="form-group px-5 p-3">
-      <label for="dep-city">Departure City</label>
-      <input type="text" formControlName="dep-city" name="dep-city" class="form-control" placeholder="Enter departure city">
+          <div class="form-group p-3">
+            <label for="arrival">Arrival</label>
+            <input type="number" formControlName="arrival" name="arrival" class="form-control" placeholder="Enter arrival city" >
+          </div>
+
+          <div class="form-group p-3">
+            <label for="availableSeats">Available Seats</label>
+            <input type="number" formControlName="availableSeats" name="availableSeats" class="form-control" placeholder="Enter seats">
+          </div>
+
+          <div class="container d-flex justify-content-center my-4">
+            <button type="submit" class="w-100 btn btn-lg btn-success">Add</button>
+          </div>
+        </form>
+      </div>
     </div>
-
-    <div class="form-group px-5 p-3">
-      <label for="arr-city">Arrival City</label>
-      <input type="text" formControlName="arr-city" name="arr-city" class="form-control" placeholder="Enter arrival city" >
+  </div>
+  <div class="col">
+    <div class="card mb-4 rounded-3 shadow-sm border-warning">
+      <div class="card-header py-3 bg-warning">
+        <h4 class="my-0 fw-normal text-center">Update Flight</h4>
+      </div>
+      <div class="card-body">
+        <form (ngSubmit)="update()" [formGroup]="form">
+          <div class="form-group pt-5 px-4">
+            <label for="id">Flight ID</label>
+            <input type="number" formControlName="id" name="id" class="form-control" placeholder="Enter flight id">
+          </div>
+          <div class="form-group py-5 px-4">
+            <label for="availableSeats">Available Seats</label>
+            <input type="number" formControlName="availableSeats" name="availableSeats" class="form-control" placeholder="Enter seats">
+          </div>
+          <div class="container d-flex justify-content-center my-4 py-2">
+            <button type="submit" class="w-100 btn btn-lg btn-warning">Update</button>
+          </div>
+        </form>
+      </div>
     </div>
-
-    <div class="form-group px-5 p-3">
-      <label for="availableSeats">Available Seats</label>
-      <input type="number" formControlName="availableSeats" name="availableSeats" class="form-control" placeholder="Enter seats">
+  </div>
+  <div class="col">
+    <div class="card mb-4 rounded-3 shadow-sm border-danger">
+      <div class="card-header py-3 text-white bg-danger border-danger">
+        <h4 class="my-0 fw-normal text-center">Delete</h4>
+      </div>
+      <div class="card-body py-5">
+        <form (ngSubmit)="delete()" [formGroup]="form">
+          <div class="p-2"></div>
+          <div class="form-group px-3 py-5">
+            <label for="id">Flight ID</label>
+            <input type="number" formControlName="id" name="id" class="form-control" placeholder="Enter flight id">
+          </div>
+          <div class="container d-flex justify-content-center mt-5 pt-5">
+            <button type="submit" class="w-100 btn btn-lg btn-danger">Delete</button>
+          </div>
+        </form>
+      </div>
     </div>
-
-    <div class="container d-flex justify-content-center my-4">
-      <button type="submit" class="btn btn-light" routerLink="">ADD FLIGHT</button>
-    </div>
-
-    <div class="container d-flex justify-content-center my-4">
-      <button type="submit" class="btn btn-light" routerLink="flights">Back</button>
-    </div>
-
-  </form>
-
+  </div>
 </div>
-
-<!-- <div class="container my-5 p-5 w-75">
-  <h2>Update Flight</h2>
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Departure</th>
-        <th scope="col">Arrival</th>
-        <th scope="col">Available Seats</th>
-    </thead>
-    <tbody>
-      <tr *ngFor="let flight of flights">
-        <th scope="row">{{flight.id}}</th>
-        <td>{{flight.departure}}</td>
-        <td>{{flight.arrival}}</td>
-        <td>{{flight.availableSeats}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div> -->
-
-<!-- <div class="container my-5 p-5 w-75">
-  <h2>Delete Flight</h2>
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Departure</th>
-        <th scope="col">Arrival</th>
-        <th scope="col">Available Seats</th>
-    </thead>
-    <tbody>
-      <tr *ngFor="let flight of flights">
-        <th scope="row">{{flight.id}}</th>
-        <td>{{flight.departure}}</td>
-        <td>{{flight.arrival}}</td>
-        <td>{{flight.availableSeats}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div> -->
