--- a/fe-angular/src/app/components/flights/flights.component.html
+++ b/fe-angular/src/app/components/flights/flights.component.html
@@ -1,30 +1,28 @@
-<app-navbar></app-navbar>
-
 <div class="container my-5 w-100">
-  <table class="table table-responsive table-striped">
+  <table class="table table-responsive table-bordered">
     <thead>
       <tr>
         <th scope="col">Id</th>
         <th scope="col">Departure</th>
         <th scope="col">Arrival</th>
-        <th scope="col">Available Seats</th>
-        <th scope="col">Add</th>
-        <th scope="col">Update</th>
-        <th scope="col">Delete</th>
+        <th scope="col" class="text-center">Available Seats</th>
+        <th scope="col" class="text-center">Add</th>
+        <th scope="col" class="text-center">Update</th>
+        <th scope="col" class="text-center">Delete</th>
     </thead>
     <tbody>
       <tr *ngFor="let flight of flights">
         <th scope="row">{{flight.id}}</th>
         <td>{{flight.departure}}</td>
         <td>{{flight.arrival}}</td>
-        <td>{{flight.availableSeats}}</td>
-        <td style="text-align: right;" class="d-flex button_div">
+        <td class="text-center">{{flight.availableSeats}}</td>
+        <td class="text-center">
           <button type="button" class="btn btn-outline-success" routerLink="/modifyFlights"><i class="fa-solid fa-plus"></i></button>
         </td>
-        <td>
+        <td class="text-center">
           <button type="button" class="btn btn-outline-warning" routerLink="/modifyFlights"><i class="fa-solid fa-pen-to-square"></i></button>
         </td>
-        <td>
+        <td class="text-center">
           <button type="button" class="btn btn-outline-danger" routerLink="/modifyFlights"><i class="fa-solid fa-xmark"></i></button>
         </td>
       </tr>
