--- a/fe-angular/src/app/components/navbar/navbar.component.html
+++ b/fe-angular/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Orizon Travels</a>
+    <a href=""><i class="fa-solid fa-plane-departure text-white"></i></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,10 +11,11 @@
           <a class="nav-link active" aria-current="page" href="" routerLink="/flights">Home</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Logout
+          <a class="nav-link dropdown" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-user"></i>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item login" (click)="login()">Login</a></li>
             <li><a class="dropdown-item logout" (click)="logout()">Logout</a></li>
           </ul>
         </li>
