--- a/fe-angular/src/app/components/flights/flights.component.html
+++ b/fe-angular/src/app/components/flights/flights.component.html
@@ -1,8 +1,8 @@
 <div class="container my-5 w-100">
-  <table class="table table-responsive table-bordered">
+  <table class="table table-responsive table-striped">
     <thead>
       <tr>
-        <th scope="col">Id</th>
+        <th scope="col">ID</th>
         <th scope="col">Departure</th>
         <th scope="col">Arrival</th>
         <th scope="col" class="text-center">Available Seats</th>
