--- a/fe-angular/src/app/components/login/login.component.html
+++ b/fe-angular/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4 p-4 d-flex justify-content-center">
+<div class="container my-2 p-3 d-flex justify-content-center">
   <a href="javascript:void(0)" [routerLink]="['']" class="nav-link"></a>
 
   <form (ngSubmit)="submit()" [formGroup]="form" class="bg-light p-5">
@@ -17,7 +17,7 @@
       <button type="submit" class="btn btn-secondary" routerLink="/flights">Login</button>
     </div>
 
-    <div class="container d-flex justify-content-center my-4">
+    <div class="container d-flex justify-content-center">
       <button type="submit" class="btn btn-secondary" routerLink="/form">Register</button>
     </div>
 
