--- a/fe-angular/src/app/components/flights/flights.component.html
+++ b/fe-angular/src/app/components/flights/flights.component.html
@@ -1,5 +1,5 @@
-<div class="container my-5 w-100">
-  <table class="table table-responsive table-striped">
+<div class="container my-5 py-5 w-100">
+  <table class="table table-responsive table-striped align-middle">
     <thead>
       <tr>
         <th scope="col">ID</th>
