--- a/fe-angular/src/app/components/footer/footer.component.html
+++ b/fe-angular/src/app/components/footer/footer.component.html
@@ -1,12 +1,7 @@
-<div class="container">
-  <footer class="pt-5">
-    <div class="d-flex flex-column flex-sm-row justify-content-between p-3 border-top">
-      <p>© 2022 Albina Sela. All rights reserved.</p>
-      <ul class="list-unstyled d-flex">
-        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-        <li class="ms-3"><a class="link-dark" href="https://www.start2impact.it">s2i</a></li>
-        <li class="ms-3"><a class="link-dark" href="https://github.com/albinaAS93/FullStackProject"><i class="fa-brands fa-github"></i></a></li>
-      </ul>
-    </div>
-  </footer>
-</div>
+<footer class="d-flex justify-content-between w-100 border-top fixed-bottom bg-light px-5">
+    <p class="pt-2">© 2022 Albina Sela, All rights reserved.</p>
+    <ul class="list-unstyled d-flex pt-2">
+      <li class="ms-3"><a class="link-dark" href="https://www.start2impact.it">s2i</a></li>
+      <li class="ms-3"><a class="link-dark" href="https://github.com/albinaAS93/FullStackProject"><i class="fa-brands fa-github"></i></a></li>
+    </ul>
+</footer>
