--- a/fe-angular/src/app/components/login/login.component.html
+++ b/fe-angular/src/app/components/login/login.component.html
@@ -1,16 +1,16 @@
-<div class="container my-2 p-3 d-flex justify-content-center">
+<div class="container my-2 p-3 d-flex justify-content-center pt-5 mt-5">
   <a href="javascript:void(0)" [routerLink]="['']" class="nav-link"></a>
 
-  <form (ngSubmit)="submit()" [formGroup]="form" class="bg-light p-5">
+  <form (ngSubmit)="submit()" [formGroup]="form" class="bg-light p-5 needs-validation">
 
     <div class="form-group my-4">
         <label for="username" class="mb-1">Username</label>
-        <input type="text" formControlName="username" name="username" class="form-control" placeholder="Enter email">
+        <input type="text" formControlName="username" name="username" class="form-control" placeholder="Enter email" required>
     </div>
 
     <div class="form-group">
         <label for="password" class="mb-1">Password</label>
-        <input type="password" formControlName="password" name="password" class="form-control" placeholder="Enter password">
+        <input type="password" formControlName="password" name="password" class="form-control" placeholder="Enter password" required>
     </div>
 
     <div class="container d-flex justify-content-center my-4">
