--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -1,28 +1,27 @@
-<div class="container d-flex p-4 justify-content-center pt-5 mt-5">
+<div class="container d-flex justify-content-center p-5 mt-4">
 
-  <form (ngSubmit)="submit()" [formGroup]="form">
+  <form (ngSubmit)="submit()" [formGroup]="form" class="bg-light my-5 p-5">
 
-    <div class="form-group px-5 p-3">
-      <label for="name">Name</label>
-      <input type="text" formControlName="name" name="name" class="form-control" placeholder="Enter name" required>
+    <div class="form-group p-3">
+      <label class="form-label" for="name">Name</label>
+      <input type="text" formControlName="name" id="name" name="name" class="form-control" placeholder="Enter name">
+
     </div>
 
-    <div class="form-group px-5 p-3">
-      <label for="username">Username</label>
-      <input type="text" formControlName="username" name="username" class="form-control" placeholder="Enter email" required>
+    <div class="form-group p-3">
+      <label class="form-label" for="username">Username</label>
+      <input type="text" formControlName="username" id="username" name="username" class="form-control" placeholder="Enter email">
     </div>
 
-    <div class="form-group px-5 p-3">
-      <label for="password">Password</label>
-      <input type="password" formControlName="password" name="password" class="form-control" placeholder="Enter password" required>
+    <div class="form-group p-3">
+      <label class="form-label" for="password">Password</label>
+      <input type="password" formControlName="password" id="password" name="password" class="form-control" placeholder="Enter password">
     </div>
 
     <div class="container d-flex justify-content-center my-3">
-      <button type="submit" class="btn btn-outline-dark">Register</button>
-    </div>
+      <button type="submit" class="btn btn-secondary m-2">Register</button>
+      <button type="submit" class="btn btn-dark m-2" routerLink="">Back</button>
 
-    <div class="container d-flex justify-content-center">
-      <button type="submit" class="btn btn-secondary" routerLink="">Back</button>
     </div>
 
   </form>
