--- a/fe-angular/src/app/components/login/login.component.html
+++ b/fe-angular/src/app/components/login/login.component.html
@@ -1,24 +1,21 @@
-<div class="container my-2 p-3 d-flex justify-content-center pt-5 mt-5">
+<div class="container my-2 p-3 d-flex justify-content-center p-5 mt-4">
   <a href="javascript:void(0)" [routerLink]="['']" class="nav-link"></a>
 
-  <form (ngSubmit)="submit()" [formGroup]="form" class="bg-light p-5 needs-validation">
+  <form (ngSubmit)="submit()" [formGroup]="form" class="bg-light p-5 my-5">
 
-    <div class="form-group my-4">
+    <div class="form-group mt-3 p-3">
         <label for="username" class="mb-1">Username</label>
-        <input type="text" formControlName="username" name="username" class="form-control" placeholder="Enter email" required>
+        <input type="text" formControlName="username" id="username" name="username" class="form-control" placeholder="Enter email" required>
     </div>
 
-    <div class="form-group">
+    <div class="form-group mt-4 mb-5 p-3">
         <label for="password" class="mb-1">Password</label>
-        <input type="password" formControlName="password" name="password" class="form-control" placeholder="Enter password" required>
+        <input type="password" formControlName="password" id="password" name="password" class="form-control" placeholder="Enter password" required>
     </div>
 
-    <div class="container d-flex justify-content-center my-4">
-      <button type="submit" class="btn btn-secondary" routerLink="/flights">Login</button>
-    </div>
-
-    <div class="container d-flex justify-content-center">
-      <button type="submit" class="btn btn-secondary" routerLink="/form">Register</button>
+    <div class="container d-flex justify-content-center py-3">
+      <button type="submit" class="btn btn-secondary m-2" routerLink="/flights">Login</button>
+      <button type="submit" class="btn btn-dark m-2" routerLink="/form">Register</button>
     </div>
 
   </form>
