--- a/fe-angular/src/app/components/flights/flights.component.html
+++ b/fe-angular/src/app/components/flights/flights.component.html
@@ -1,4 +1,4 @@
-<div class="container my-5 py-5 w-100 table-responsive">
+<div class="container my-5 py-5 w-100 table-responsive border-secondary">
   <table class="table align-middle table-striped">
     <thead>
       <tr>
