--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -1,6 +1,6 @@
-<div class="container d-flex justify-content-center p-5 mt-4">
+<div class="container d-flex justify-content-center border-secondary p-5 mt-4">
 
-  <form (ngSubmit)="submit()" [formGroup]="form" class="bg-light my-5 p-5">
+  <form (ngSubmit)="submit()" [formGroup]="form" class="my-5 p-5">
 
     <div class="form-group p-3">
       <label class="form-label" for="name">Name</label>
