--- a/fe-angular/src/app/components/login/login.component.html
+++ b/fe-angular/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container my-2 p-3 d-flex justify-content-center p-5 mt-4">
   <a href="javascript:void(0)" [routerLink]="['']" class="nav-link"></a>
 
-  <form (ngSubmit)="submit()" [formGroup]="form" class="bg-light p-5 my-5">
+  <form (ngSubmit)="submit()" [formGroup]="form" class="p-5 my-5">
 
     <div class="form-group mt-3 p-3">
         <label for="username" class="mb-1">Username</label>
