--- a/fe-angular/src/app/components/modify-flights/modify-flights.component.html
+++ b/fe-angular/src/app/components/modify-flights/modify-flights.component.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-1 row-cols-md-3 mx-2 my-5 text-start py-5">
+<div class="row row-cols-1 row-cols-md-3 mx-2 my-5 text-start py-5 border-secondary">
   <div class="col">
     <div class="card mb-4 rounded-3 shadow-sm border-secondary">
       <div class="card-header py-3 bg-light text-dark">
