--- a/fe-angular/src/app/components/navbar/navbar.component.html
+++ b/fe-angular/src/app/components/navbar/navbar.component.html
@@ -11,10 +11,10 @@
           <a class="nav-link active" aria-current="page" href="" routerLink="/flights">Home</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link text-light dropdown" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-user"></i>
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item login" (click)="login()">Login</a></li>
             <li><a class="dropdown-item logout" (click)="logout()">Logout</a></li>
           </ul>
