--- a/fe-angular/src/app/components/flights/flights.component.html
+++ b/fe-angular/src/app/components/flights/flights.component.html
@@ -17,13 +17,13 @@
         <td>{{flight.arrival}}</td>
         <td class="text-center">{{flight.availableSeats}}</td>
         <td class="text-center">
-          <button type="button" class="btn btn-outline-success" routerLink="/modifyFlights"><i class="fa-solid fa-plus"></i></button>
+          <button type="button" class="btn btn-outline-dark" routerLink="/modifyFlights"><i class="fa-solid fa-plus"></i></button>
         </td>
         <td class="text-center">
-          <button type="button" class="btn btn-outline-warning" routerLink="/modifyFlights"><i class="fa-solid fa-pen-to-square"></i></button>
+          <button type="button" class="btn btn-outline-dark" routerLink="/modifyFlights"><i class="fa-solid fa-pen-to-square"></i></button>
         </td>
         <td class="text-center">
-          <button type="button" class="btn btn-outline-danger" routerLink="/modifyFlights"><i class="fa-solid fa-xmark"></i></button>
+          <button type="button" class="btn btn-outline-dark" routerLink="/modifyFlights"><i class="fa-solid fa-xmark"></i></button>
         </td>
       </tr>
     </tbody>
