--- a/fe-angular/src/app/components/modify-flights/modify-flights.component.html
+++ b/fe-angular/src/app/components/modify-flights/modify-flights.component.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-1 row-cols-md-3 mx-2 my-5 text-start py-5 border-secondary">
+<div class="row row-cols-1 row-cols-md-3 mx-2 my-5 text-start py-5 border-secondary justify-content-center">
   <div class="col">
     <div class="card mb-4 rounded-3 shadow-sm border-secondary">
       <div class="card-header py-3 bg-light text-dark">
@@ -52,7 +52,6 @@
           <div class="form-group p-3">
             <label for="id">Update Flight</label>
             <select class="form-control" formControlName="id" name="id" id="id">
-              <!-- <option selected>Select flight id</option> -->
               <option value={{flight.id}} *ngFor="let flight of flights">{{flight.departure}} - {{flight.arrival}}
             </select>
           </div>
@@ -66,35 +65,6 @@
               <i class="fa-solid fa-pencil"></i>
             </button>
             <button type="submit" class="w-50 btn btn-lg btn-dark m-1" routerLink="/flights">
-              Back
-              <i class="fa-solid fa-arrow-left"></i>
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card mb-4 rounded-3 shadow-sm border-secondary">
-      <div class="card-header py-3 text-dark bg-light">
-        <h4 class="my-0 fw-normal text-center">Delete</h4>
-      </div>
-      <div class="card-body py-5">
-        <form (ngSubmit)='delete()' [formGroup]="form">
-          <div class="p-2"></div>
-          <div class="form-group px-3 py-5">
-            <label for="id">Select Flight</label>
-            <select class="form-control" formControlName="id" name="id" id="id">
-              <!-- <option selected>Select flight id</option> -->
-              <option value={{flight.id}} *ngFor="let flight of flights">{{flight.departure}} - {{flight.arrival}}
-            </select>
-          </div>
-          <div class="container d-flex justify-content-center mt-5 pt-5">
-            <button type="submit" class="w-50 btn btn-lg btn-secondary m-2">
-              Delete
-              <i class="fa-solid fa-xmark"></i>
-            </button>
-            <button type="submit" class="w-50 btn btn-lg btn-dark m-2" routerLink="/flights">
               Back
               <i class="fa-solid fa-arrow-left"></i>
             </button>
