--- a/fe-angular/src/app/components/flights/flights.component.html
+++ b/fe-angular/src/app/components/flights/flights.component.html
@@ -23,7 +23,7 @@
           <button type="button" class="btn btn-outline-dark" routerLink="/modifyFlights"><i class="fa-solid fa-pen-to-square"></i></button>
         </td>
         <td class="text-center">
-          <button type="button" class="btn btn-outline-dark" routerLink="/modifyFlights"><i class="fa-solid fa-xmark"></i></button>
+          <button type="button" class="btn btn-outline-dark" (click)="delete(flight.id)"><i class="fa-solid fa-xmark"></i></button>
         </td>
       </tr>
     </tbody>
