--- a/fe-angular/src/app/components/navbar/navbar.component.html
+++ b/fe-angular/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark p-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Orizon Travels</a>
-    <a href=""><i class="fa-solid fa-plane-departure text-white"></i></a>
+    <a class="navbar-brand" routerLink="/flights">Orizon Travels</a>
+    <a routerLink="/flights"><i class="fa-solid fa-plane-departure text-white"></i></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
