--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -1,11 +1,13 @@
 <div class="container d-flex justify-content-center border-secondary p-5 mt-4">
 
-  <form (ngSubmit)="submit()" [formGroup]="form" class="my-5 p-5">
+  <form [form-group]="form" (ngSubmit)="submit()"  class="my-5 p-5">
 
     <div class="form-group p-3">
       <label class="form-label" for="name">Name</label>
-      <input type="text" formControlName="name" id="name" name="name" class="form-control" placeholder="Enter name">
-
+      <input type="text" formControlName="name" id="name" name="name" class="form-control" placeholder="Enter name" [ngClass]="{'is-invalid' : submitted && f.name.errors}">
+      <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+        <div *ngIf="f.name.errors.required">Name is required</div>
+      </div>
     </div>
 
     <div class="form-group p-3">
