--- a/fe-angular/src/app/components/modify-flights/modify-flights.component.html
+++ b/fe-angular/src/app/components/modify-flights/modify-flights.component.html
@@ -1,5 +1,5 @@
-<div class="row row-cols-1 row-cols-md-3 mx-2 my-5 text-start py-5 border-secondary justify-content-center">
-  <div class="col">
+<div class="row row-cols-1 row-cols-md-3 my-5 text-start py-5 border-secondary justify-content-center">
+  <div class="col-6">
     <div class="card mb-4 rounded-3 shadow-sm border-secondary">
       <div class="card-header py-3 bg-light text-dark">
         <h4 class="my-0 fw-normal text-center">Add Flight</h4>
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-  <div class="col">
+  <div class="col-6">
     <div class="card mb-4 rounded-3 shadow-sm border-secondary">
       <div class="card-header py-3 bg-light">
         <h4 class="my-0 fw-normal text-center">Update</h4>
