--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center border-secondary p-5 mt-4">
 
-  <form [formGroup]="requiredForm"  class="my-5 p-5">
+  <form [formGroup]="requiredForm" class="my-5 p-5">
 
     <div class="form-group p-3">
       <label class="form-label" for="name">Name</label>
@@ -15,6 +15,11 @@
     <div class="form-group p-3">
       <label class="form-label" for="username">Username</label>
       <input type="text" formControlName="username" id="username" name="username" class="form-control" placeholder="Enter email">
+      <div *ngIf="requiredForm.controls['username'].invalid && requiredForm.controls['username'].touched" class="text-danger">
+        <div *ngIf="requiredForm.controls['username'].errors">
+          Username is required.
+        </div>
+      </div>
     </div>
 
     <div class="form-group p-3">
