--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -5,10 +5,10 @@
     <div class="form-group p-3">
       <label class="form-label" for="name">Name</label>
       <input type="text" formControlName="name" id="name" name="name" class="form-control" placeholder="Enter name">
-    </div>
-    <div *ngIf="requiredForm.controls['name'].invalid && requiredForm.controls['name'].touched" class="text-danger">
-      <div *ngIf="requiredForm.controls['name'].errors">
-        Name is required.
+      <div *ngIf="requiredForm.controls['name'].invalid && requiredForm.controls['name'].touched" class="text-danger">
+        <div *ngIf="requiredForm.controls['name'].errors">
+          Name is required.
+        </div>
       </div>
     </div>
 
@@ -25,6 +25,11 @@
     <div class="form-group p-3">
       <label class="form-label" for="password">Password</label>
       <input type="password" formControlName="password" id="password" name="password" class="form-control" placeholder="Enter password">
+      <div *ngIf="requiredForm.controls['password'].invalid && requiredForm.controls['password'].touched" class="text-danger">
+        <div *ngIf="requiredForm.controls['password'].errors">
+          Password is required.
+        </div>
+      </div>
     </div>
 
     <div class="container d-flex justify-content-center my-3">
