--- a/fe-angular/src/app/components/modify-flights/modify-flights.component.html
+++ b/fe-angular/src/app/components/modify-flights/modify-flights.component.html
@@ -11,6 +11,11 @@
             <select class="form-control" formControlName="departure" name="departure" id="departure">
               <option value={{city.id}} *ngFor="let city of cities">{{city.name}}
             </select>
+            <div *ngIf="form.controls['departure'].invalid && form.controls['departure'].touched" class="text-danger">
+              <div *ngIf="form.controls['departure'].errors">
+                Departure city is required.
+              </div>
+            </div>
           </div>
 
           <div class="form-group p-3">
@@ -18,22 +23,31 @@
             <select class="form-control" formControlName="arrival" name="arrival" id="arrival">
               <option value={{city.id}} *ngFor="let city of cities">{{city.name}}
             </select>
+            <div *ngIf="form.controls['arrival'].invalid && form.controls['arrival'].touched" class="text-danger">
+              <div *ngIf="form.controls['arrival'].errors">
+                Arrival city is required.
+              </div>
+            </div>
           </div>
 
           <div class="form-group p-3">
             <label for="availableSeats">Available Seats</label>
             <input type="number" formControlName="availableSeats" name="availableSeats" class="form-control" placeholder="Enter seats">
+            <div *ngIf="form.controls['availableSeats'].invalid && form.controls['availableSeats'].touched" class="text-danger">
+              <div *ngIf="form.controls['availableSeats'].errors">
+                Number of availables seats is required.
+              </div>
+            </div>
           </div>
 
           <div class="container d-flex justify-content-center my-4">
             <button type="submit" class="w-50 btn btn-lg btn-secondary m-2">
               Add
-              <i class="fa-solid fa-check"></i>
             </button>
             <button type="submit" class="w-50 btn btn-lg btn-dark m-2" routerLink="/flights">
               Back
-              <i class="fa-solid fa-arrow-left"></i>
             </button>
+            <div id="add"></div>
           </div>
         </form>
       </div>
@@ -42,7 +56,7 @@
   <div class="col-6">
     <div class="card mb-4 rounded-3 shadow-sm border-secondary">
       <div class="card-header py-3 bg-light">
-        <h4 class="my-0 fw-normal text-center">Update</h4>
+        <h4 class="my-0 fw-normal text-center">Update Flight</h4>
       </div>
       <div class="card-body py-5">
         <form (ngSubmit)='update()' [formGroup]="form">
@@ -60,11 +74,9 @@
           <div class="container d-flex justify-content-center mt-4 pt-5">
             <button type="submit" class="w-50 btn btn-lg btn-secondary m-1">
               Update
-              <i class="fa-solid fa-pencil"></i>
             </button>
             <button type="submit" class="w-50 btn btn-lg btn-dark m-1" routerLink="/flights">
               Back
-              <i class="fa-solid fa-arrow-left"></i>
             </button>
           </div>
         </form>
