--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -1,8 +1,8 @@
-<div class="container d-flex justify-content-center border-secondary p-5 mt-4">
+<div class="container justify-content-center">
 
-  <form [formGroup]="requiredForm" class="my-5 p-5">
+  <form [formGroup]="requiredForm" class="">
 
-    <div class="form-group p-3">
+    <div class="form-group pb-4">
       <label class="form-label" for="name">Name</label>
       <input type="text" formControlName="name" id="name" name="name" class="form-control" placeholder="Enter name">
       <div *ngIf="requiredForm.controls['name'].invalid && requiredForm.controls['name'].touched" class="text-danger">
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <div class="form-group p-3">
+    <div class="form-group pb-4">
       <label class="form-label" for="username">Username</label>
       <input type="text" formControlName="username" id="username" name="username" class="form-control" placeholder="Enter email">
       <div *ngIf="requiredForm.controls['username'].invalid && requiredForm.controls['username'].touched" class="text-danger">
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <div class="form-group p-3">
+    <div class="form-group">
       <label class="form-label" for="password">Password</label>
       <input type="password" formControlName="password" id="password" name="password" class="form-control" placeholder="Enter password">
       <div *ngIf="requiredForm.controls['password'].invalid && requiredForm.controls['password'].touched" class="text-danger">
@@ -32,9 +32,9 @@
       </div>
     </div>
 
-    <div class="container d-flex justify-content-center my-3">
-      <button type="button" class="btn btn-secondary m-2" (click)="submit()">Register</button>
-      <button type="button" class="btn btn-dark m-2" routerLink="">Back</button>
+    <div class="allBtn justify-content-center mt-3">
+      <button type="button" class="btn btn-secondary" (click)="submit()">Register</button>
+      <button type="button" class="btn btn-dark" routerLink="">Back</button>
     </div>
 
   </form>
