--- a/fe-angular/src/app/components/login/login.component.html
+++ b/fe-angular/src/app/components/login/login.component.html
@@ -1,31 +1,31 @@
-<div class="container my-2 p-3 d-flex justify-content-center p-5 mt-4">
+<div class="container justify-content-center">
   <a href="javascript:void(0)" [routerLink]="['']" class="nav-link"></a>
 
-  <form (ngSubmit)="submit()" [formGroup]="requiredForm" class="p-5 my-5">
+  <form (ngSubmit)="submit()" [formGroup]="requiredForm">
 
-    <div class="form-group mt-3 p-3">
-        <label for="username" class="mb-1">Username</label>
-        <input type="text" formControlName="username" id="username" name="username" class="form-control" placeholder="Enter email" required>
-        <div *ngIf="requiredForm.controls['username'].invalid && requiredForm.controls['username'].touched" class="text-danger">
-          <div *ngIf="requiredForm.controls['username'].errors">
-            Username is required.
-          </div>
-        </div>
-      </div>
+    <div class="form-group pb-4">
+      <label for="username" class="mb-1">Username</label>
+      <input type="text" formControlName="username" id="username" name="username" class="form-control" placeholder="Enter email" required>
+      <small *ngIf="requiredForm.controls['username'].invalid && requiredForm.controls['username'].touched" class="text-danger">
+        <small *ngIf="requiredForm.controls['username'].errors">
+          Username is required.
+        </small>
+      </small>
+    </div>
 
-    <div class="form-group mt-4 mb-5 p-3">
-        <label for="password" class="mb-1">Password</label>
-        <input type="password" formControlName="password" id="password" name="password" class="form-control" placeholder="Enter password" required>
-        <div *ngIf="requiredForm.controls['password'].invalid && requiredForm.controls['password'].touched" class="text-danger">
-          <div *ngIf="requiredForm.controls['password'].errors">
-            Password is required.
-          </div>
-        </div>
-      </div>
+    <div class="form-group">
+      <label for="password" class="mb-1">Password</label>
+      <input type="password" formControlName="password" id="password" name="password" class="form-control" placeholder="Enter password" required>
+      <small *ngIf="requiredForm.controls['password'].invalid && requiredForm.controls['password'].touched" class="text-danger">
+        <small *ngIf="requiredForm.controls['password'].errors">
+          Password is required.
+        </small>
+      </small>
+    </div>
 
-    <div class="container d-flex justify-content-center py-3">
-      <button type="submit" class="btn btn-secondary m-2" routerLink="/flights">Login</button>
-      <button type="submit" class="btn btn-dark m-2" routerLink="/form">Register</button>
+    <div class="allBtn justify-content-center mt-3">
+      <button type="submit" class="btn btn-secondary" routerLink="/flights">Login</button>
+      <button type="submit" class="btn btn-dark" routerLink="/form">Register</button>
     </div>
 
   </form>
