--- a/fe-angular/src/app/components/modify-flights/modify-flights.component.html
+++ b/fe-angular/src/app/components/modify-flights/modify-flights.component.html
@@ -1,85 +1,86 @@
-<div class="row row-cols-1 row-cols-md-3 my-5 text-start py-5 border-secondary justify-content-center">
-  <div class="col-6">
-    <div class="card mb-4 rounded-3 shadow-sm border-secondary">
-      <div class="card-header py-3 bg-light text-dark">
-        <h4 class="my-0 fw-normal text-center">Add Flight</h4>
-      </div>
-      <div class="card-body">
-        <form (ngSubmit)="add()" [formGroup]="form">
-          <div class="form-group p-3">
-            <label for="departure">Departure City</label>
-            <select class="form-control" formControlName="departure" name="departure" id="departure">
-              <option value={{city.id}} *ngFor="let city of cities">{{city.name}}
-            </select>
-            <div *ngIf="form.controls['departure'].invalid && form.controls['departure'].touched" class="text-danger">
-              <div *ngIf="form.controls['departure'].errors">
-                Departure city is required.
+<div class="container">
+  <div class="row border-secondary justify-content-center pt-5">
+    <div class="col-12 col-sm-6 col-lg-5">
+      <div class="card mb-4 rounded-3 shadow-sm border-secondary">
+        <div class="card-header py-2 bg-light text-dark">
+          <h4 class="my-0 fw-normal text-center">Add Flight</h4>
+        </div>
+        <div class="card-body">
+          <form (ngSubmit)="add()" [formGroup]="form">
+            <div class="form-group p-3">
+              <label for="departure">Departure City</label>
+              <select class="form-control" formControlName="departure" name="departure" id="departure">
+                <option value={{city.id}} *ngFor="let city of cities">{{city.name}}
+              </select>
+              <div *ngIf="form.controls['departure'].invalid && form.controls['departure'].touched" class="text-danger">
+                <div *ngIf="form.controls['departure'].errors">
+                  Departure city is required.
+                </div>
               </div>
             </div>
-          </div>
-
-          <div class="form-group p-3">
-            <label for="arrival">Arrival City</label>
-            <select class="form-control" formControlName="arrival" name="arrival" id="arrival">
-              <option value={{city.id}} *ngFor="let city of cities">{{city.name}}
-            </select>
-            <div *ngIf="form.controls['arrival'].invalid && form.controls['arrival'].touched" class="text-danger">
-              <div *ngIf="form.controls['arrival'].errors">
-                Arrival city is required.
+            <div class="form-group p-3">
+              <label for="arrival">Arrival City</label>
+              <select class="form-control" formControlName="arrival" name="arrival" id="arrival">
+                <option value={{city.id}} *ngFor="let city of cities">{{city.name}}
+              </select>
+              <div *ngIf="form.controls['arrival'].invalid && form.controls['arrival'].touched" class="text-danger">
+                <div *ngIf="form.controls['arrival'].errors">
+                  Arrival city is required.
+                </div>
               </div>
             </div>
-          </div>
-
-          <div class="form-group p-3">
-            <label for="availableSeats">Available Seats</label>
-            <input type="number" formControlName="availableSeats" name="availableSeats" class="form-control" placeholder="Enter seats">
-            <div *ngIf="form.controls['availableSeats'].invalid && form.controls['availableSeats'].touched" class="text-danger">
-              <div *ngIf="form.controls['availableSeats'].errors">
-                Number of availables seats is required.
+            <div class="form-group p-3">
+              <label for="availableSeats">Available Seats</label>
+              <input type="number" formControlName="availableSeats" name="availableSeats" class="form-control" placeholder="Enter seats">
+              <div *ngIf="form.controls['availableSeats'].invalid && form.controls['availableSeats'].touched" class="text-danger">
+                <div *ngIf="form.controls['availableSeats'].errors">
+                  Number of availables seats is required.
+                </div>
               </div>
             </div>
-          </div>
-
-          <div class="container d-flex justify-content-center my-4">
-            <button type="submit" class="w-50 btn btn-lg btn-secondary m-2">
-              Add
-            </button>
-            <button type="submit" class="w-50 btn btn-lg btn-dark m-2" routerLink="/flights">
-              Back
-            </button>
-            <div id="add"></div>
-          </div>
-        </form>
+            <small class="addedFlight"></small>
+            <div class="container d-flex justify-content-center my-4">
+              <button type="submit" class="w-50 btn btn-lg btn-secondary m-2">
+                Add
+              </button>
+              <button type="submit" class="w-50 btn btn-lg btn-dark m-2" routerLink="/flights">
+                Back
+              </button>
+              <div id="add"></div>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col-6">
-    <div class="card mb-4 rounded-3 shadow-sm border-secondary">
-      <div class="card-header py-3 bg-light">
-        <h4 class="my-0 fw-normal text-center">Update Flight</h4>
-      </div>
-      <div class="card-body py-5">
-        <form (ngSubmit)='update()' [formGroup]="form">
-          <div class="p-2"></div>
-          <div class="form-group p-3">
-            <label for="id">Update Flight</label>
-            <select class="form-control" formControlName="id" name="id" id="id">
-              <option value={{flight.id}} *ngFor="let flight of flights">{{flight.departure}} - {{flight.arrival}}
-            </select>
-          </div>
-          <div class="form-group p-3">
-            <label for="availableSeats">Available Seats</label>
-            <input type="number" formControlName="availableSeats" name="availableSeats" class="form-control" placeholder="Enter seats">
-          </div>
-          <div class="container d-flex justify-content-center mt-4 pt-5">
-            <button type="submit" class="w-50 btn btn-lg btn-secondary m-1">
-              Update
-            </button>
-            <button type="submit" class="w-50 btn btn-lg btn-dark m-1" routerLink="/flights">
-              Back
-            </button>
-          </div>
-        </form>
+    <div class="col-12 col-sm-6 col-lg-5">
+      <div class="card mb-4 rounded-3 shadow-sm border-secondary">
+        <div class="card-header py-2 bg-light">
+          <h4 class="my-0 fw-normal text-center">Update Flight</h4>
+        </div>
+        <div class="card-body py-5">
+          <form (ngSubmit)='update()' [formGroup]="form">
+            <div class="p-2"></div>
+            <div class="form-group p-3">
+              <label for="id">Update Flight</label>
+              <select class="form-control" formControlName="id" name="id" id="id">
+                <option value={{flight.id}} *ngFor="let flight of flights">{{flight.departure}} - {{flight.arrival}}
+              </select>
+            </div>
+            <div class="form-group p-3">
+              <label for="availableSeats2">Available Seats</label>
+              <input type="number" formControlName="availableSeats2" name="availableSeats2" class="form-control" placeholder="Enter seats">
+            </div>
+            <a href="#" onClick="window.open('/flights','finestra','',true);">seconda finestra</a>
+            <div class="container d-flex justify-content-center mt-4 pt-5">
+              <button type="submit" class="w-50 btn btn-lg btn-secondary m-1">
+                Update
+              </button>
+              <button type="submit" class="w-50 btn btn-lg btn-dark m-1" routerLink="/flights">
+                Back
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
