--- a/fe-angular/src/app/components/modify-flights/modify-flights.component.html
+++ b/fe-angular/src/app/components/modify-flights/modify-flights.component.html
@@ -67,10 +67,9 @@
               </select>
             </div>
             <div class="form-group p-3">
-              <label for="availableSeats2">Available Seats</label>
-              <input type="number" formControlName="availableSeats2" name="availableSeats2" class="form-control" placeholder="Enter seats">
+              <label for="availableSeats">Available Seats</label>
+              <input type="number" formControlName="availableSeats" name="availableSeats" class="form-control" placeholder="Enter seats">
             </div>
-            <a href="#" onClick="window.open('/flights','finestra','',true);">seconda finestra</a>
             <div class="container d-flex justify-content-center mt-4 pt-5">
               <button type="submit" class="w-50 btn btn-lg btn-secondary m-1">
                 Update
