--- a/fe-angular/src/app/components/flights/flights.component.css
+++ b/fe-angular/src/app/components/flights/flights.component.css
@@ -1,6 +1,5 @@
 table {
-    width: 60rem;
-    margin: 1.5rem auto;
+    margin: 5rem auto;
     text-align: center;
 }
 th {
@@ -15,4 +14,29 @@ small {
 }
 .seats {
     width: 12rem;
+}
+.btn {
+    margin: 5px;
+}
+.message {
+    color: red;
+    margin-top: 3rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+@media (max-width: 768px) {
+    .seats {
+        width: 1rem;
+    }
+    .btn {
+        margin: 2px;
+    }
+}
+@media (max-width: 500px) {
+    table {
+        margin: 3rem auto;
+    }
 }
