--- a/fe-angular/src/app/components/footer/footer.component.html
+++ b/fe-angular/src/app/components/footer/footer.component.html
@@ -1,7 +1,11 @@
-<footer class="d-flex justify-content-between w-100 border-top fixed-bottom bg-light px-5">
-    <p class="pt-2">© 2022 Albina Sela.</p>
-    <ul class="list-unstyled d-flex pt-2">
-      <li class="ms-3"><a class="link-dark" href="https://www.start2impact.it">s2i</a></li>
-      <li class="ms-3"><a class="link-dark" href="https://github.com/albinaAS93/FullStackProject"><i class="fa-brands fa-github"></i></a></li>
-    </ul>
+<footer class="container-fluid fixed-bottom border-top bg-light mt-1 p-3">
+  <div class="row align-items-center justify-content-between">
+    <div class="col-auto"><p class="m-0"> © 2022 Albina Sela.</p></div>
+    <div class="col-auto">
+      <ul class="list-unstyled d-flex m-0">
+        <li class="ms-3"><a class="link-dark" href="https://www.start2impact.it">s2i</a></li>
+        <li class="ms-3"><a class="link-dark" href="https://github.com/albinaAS93/FullStackProject"><i class="fa-brands fa-github"></i></a></li>
+      </ul>
+    </div>
+  </div>
 </footer>
