--- a/fe-angular/src/app/components/form/form.component.css
+++ b/fe-angular/src/app/components/form/form.component.css
@@ -1,6 +1,6 @@
-.container {
-    width: 40rem;
-    margin: 5rem auto;
+.ff {
+    width: 30rem;
+    margin: 3rem auto;
     border: 1px solid lightgray;
     border-radius: 5px;
     box-shadow: 0px 0px 35px #a8a7a7;
@@ -15,4 +15,36 @@ form {
 .btn {
     width: 5rem;
     margin: 0.5rem;
+}
+
+.message {
+    color: red;
+    margin-top: 3rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+@media (max-width: 1199px) {
+    .ff  {
+        margin: 4rem auto;
+    }
+}
+@media (max-width: 768px) {
+    .ff  {
+        margin: 4rem auto;
+    }
+}
+@media (max-width: 500px) {
+    .ff  {
+        width: 20rem;
+        margin: 3rem auto;
+    }
+    form {
+        padding: 4rem 1rem;
+    }
+    .message {
+        font-size: 0.9rem;
+    }
 }
