--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -1,4 +1,4 @@
-<div class="container justify-content-center">
+<div class="container ff justify-content-center">
 
   <form [formGroup]="requiredForm" class="">
 
@@ -32,8 +32,10 @@
       </div>
     </div>
 
+    <div class="message" #mm></div>
+    
     <div class="allBtn justify-content-center mt-3">
-      <button type="button" class="btn btn-secondary" (click)="submit()">Register</button>
+      <button type="button" class="btn btn-secondary" (click)="submit()" (click)="message()">Register</button>
       <button type="button" class="btn btn-dark" routerLink="">Back</button>
     </div>
 
