--- a/fe-angular/src/app/components/login/login.component.html
+++ b/fe-angular/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container justify-content-center">
+<div class="container login justify-content-center">
   <a href="javascript:void(0)" [routerLink]="['']" class="nav-link"></a>
 
   <form (ngSubmit)="submit()" [formGroup]="requiredForm">
@@ -23,8 +23,10 @@
       </small>
     </div>
 
+    <div class="message" #mm></div>
+
     <div class="allBtn justify-content-center mt-3">
-      <button type="submit" class="btn btn-secondary" routerLink="/flights">Login</button>
+      <button type="submit" class="btn btn-secondary" routerLink="/flights" (click)="message()">Login</button>
       <button type="submit" class="btn btn-dark" routerLink="/form">Register</button>
     </div>
 
