--- a/fe-angular/src/app/components/modify-flights/modify-flights.component.css
+++ b/fe-angular/src/app/components/modify-flights/modify-flights.component.css
@@ -1,12 +1,26 @@
 .message {
-    display: inline-block;
-    padding: 5rem;
-    position: absolute;
-    top: 30%;
-    left: 30%;
-    background-color: black;
-    color: white;
-    font-size: 1.5rem;
-    overflow: hidden;
-    transition: 5s ease-in;
+    color: red;
+    margin-top: 3rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.messageUP {
+    color: red;
+    margin-top: 3rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.flights {
+    margin-top: 3rem;
+}
+@media (max-width: 768px){
+    .flights {
+        margin-top: 3rem;
+    }
 }
