--- a/fe-angular/src/app/components/navbar/navbar.component.html
+++ b/fe-angular/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark sticky bg-dark p-3">
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top bg-dark p-3">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/flights">Orizon Travels</a>
     <a routerLink="/flights"><i class="fa-solid fa-plane-departure text-white"></i></a>
