--- a/fe-angular/src/app/components/modify-flights/modify-flights.component.css
+++ b/fe-angular/src/app/components/modify-flights/modify-flights.component.css
@@ -1,4 +1,4 @@
-.message {
+/* .message {
     color: red;
     margin-top: 3rem;
     font-size: 1.2rem;
@@ -14,7 +14,7 @@
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
-}
+} */
 
 .flights {
     margin-top: 3rem;
