--- a/fe-angular/src/app/components/flights/flights.component.css
+++ b/fe-angular/src/app/components/flights/flights.component.css
@@ -20,12 +20,20 @@ small {
     margin: 5px;
 }
 .message {
+    position: absolute;
+    display: none;
+    top: 50%;
+    left: 50%;
     color: red;
-    margin-top: 3rem;
+    background-color: white;
+    padding: 3rem;
     font-size: 1.2rem;
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
+    transform: translate(-50%, -50%);
+    border-radius: 70px;
+    box-shadow: 0px 0px 45px #fca4a4;
 }
 
 @media (max-width: 768px) {
