--- a/fe-angular/src/app/components/form/form.component.html
+++ b/fe-angular/src/app/components/form/form.component.html
@@ -32,10 +32,10 @@
       </div>
     </div>
 
-    <div class="message" #mm></div>
+    <div class="msg" #mm></div>
     
     <div class="allBtn justify-content-center mt-3">
-      <button type="button" class="btn btn-secondary" (click)="submit()" (click)="message()">Register</button>
+      <button type="button" class="btn btn-secondary" (click)="submit()" (click)="msg()">Register</button>
       <button type="button" class="btn btn-dark" routerLink="">Back</button>
     </div>
 
