--- a/fe-angular/src/app/components/login/login.component.html
+++ b/fe-angular/src/app/components/login/login.component.html
@@ -23,10 +23,10 @@
       </small>
     </div>
 
-    <div class="message" #mm></div>
+    <div class="msg" #mm></div>
 
     <div class="allBtn justify-content-center mt-3">
-      <button type="submit" class="btn btn-secondary" routerLink="/flights" (click)="message()">Login</button>
+      <button type="submit" class="btn btn-secondary" routerLink="/flights" (click)="msg()">Login</button>
       <button type="submit" class="btn btn-dark" routerLink="/form">Register</button>
     </div>
 
