--- a/fe-angular/src/styles.css
+++ b/fe-angular/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+.message {
+    position: absolute;
+    display: none;
+    top: 50%;
+    left: 50%;
+    color: red;
+    background-color: white;
+    padding: 3rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    transform: translate(-50%, -50%);
+    border-radius: 70px;
+    box-shadow: 0px 0px 45px #fca4a4;
+}
+
+.messageUP {
+    position: absolute;
+    display: none;
+    top: 50%;
+    left: 50%;
+    color: red;
+    background-color: white;
+    padding: 3rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    transform: translate(-50%, -50%);
+    border-radius: 70px;
+    box-shadow: 0px 0px 45px #fca4a4;
+}
